--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
     <artifactId>hibernate-validator</artifactId>
     <version>5.2.4.Final</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
+
 
 		<!-- @Inject -->
 		<dependency>
